# maven-version-rs

./: .gitignore  Cargo.toml
src/: lib.rs  maven2.rs  maven3.rs
tests/: all.rs  versions.lst
upstream-sort/: Justfile  README.md  pom.xml
upstream-sort/src/: Sort.java
upstream-sort/src/test/java/: MirroredTest.java
