[package]
name = "maven-version"
version = "0.1.0"
authors = ["Matthias Schorsch", "Chris West (Faux)"]
description = "Maven 2/3 Artifact Version Parsers."
repository = "https://github.com/FauxFaux/maven-version-rs"
keywords = ["maven", "java", "artifact"]
license = "MIT"

edition = "2018"

[dependencies]

[dev-dependencies]
rand = "0.6"
